@@ -99,6 +99,8 @@ Evolution_0 = 'Evolution'
 Evolution_1 = _('Email client, calendar, contact manager and address manager')
 Extcalc_0 = 'Extcalc'
 Extcalc_1 = _('Multifunctional graphic calculator')
+Fatrat_0 = 'Fatrat'
+Fatrat_1 = _('A download manager supporting RapidShare.com, YouTube and remote control')
 Fcitx_0 = 'Fcitx'
 Fcitx_1 = _('Popular Chinese input method')
 FileZilla_0 = 'FileZilla'
