@@ -6,6 +6,8 @@
     * Add rkward, A graphic user interface to the R programming language.
     * Add qBittorrent, featureful open source equivalent to utorrent.
     * Add DeaDBeeF, ultimate music player.
+    * Add Fatrat, a feature rich download manager.
+    * Add Mobloquer, protect internet privacy.
 
 2010-07-21 Homer Xing <homer.xing@gmail.com>
 
